    on predicate scope directives during the compilation of the entities that
    contain the directives.

    Improved the performance of coinductive predicates when using back-end
    Prolog compilers such as SICStus Prolog that don't provide the soft-cut
    control construct but provide the soft-cut built-in meta-predicate (if/3).

    Added a "streamvars" library object, derived from the existing "assignvars"
    library category, featuring support for adding and retrieving terms (which
    may be variables) from a "stream" variable.

    Updated the "coinduction" example, taking advantage of the enhanced
    coinductive/1 directive and broadening the number of individual examples
    that can be run using SICStus Prolog. Added a model checking example, using
    coinduction, coroutining, and constraints, contributed by Neda Saeedloei.

    Added missing entries for the meta_non_terminal/1 directive and for the
    call//N non-terminal to the "help" example.

    Added a parser for PDDL 3.0 files, contributed by Robert Sasak.

    Added code folding support to the SubEthaEdit text editor. Added code
    folding support for conditional compilation blocks to the Kate, Vim,
    and TextMate text editors.

    Updated the integration scripts in order to load the library paths file
    before loading the Logtalk compiler/runtime. This change aims to simplify
    loading of library and example files from the settings files.

    Updated the Windows installer in order to detect YAP 64 bits versions.


2.43.0 - July 31, 2011

    Added experimental support for Lean Prolog.

    Changed error reporting by the Logtalk compiler and runtime. All exception
    terms now use, whenever possible, the error(Error, logtalk(Goal, Entity))
    format. Changed the internal error checking to use, whenever practical,
    the new '$lgt_must_be'/2-3 internal predicates.

    Added an "optimize" flag, whose default value is "on". This flag allows