@@ -60,6 +60,10 @@ RELEASE NOTES
     Prolog compilers such as SICStus Prolog that don't provide the soft-cut
     control construct but provide the soft-cut built-in meta-predicate (if/3).
 
+    Corrected a bug where a spurious report of compilation/loading warnings
+    could be printed when a source file was compiled/loaded with the compiler
+    flag "report" turned off.
+
     Added a "streamvars" library object, derived from the existing "assignvars"
     library category, featuring support for adding and retrieving terms (which
     may be variables) from a "stream" variable.
